2015-03-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.8)

	- Add note to point at Jo's alternative method fit_DT_YHd_method.

2015-03-09  Benjamin Villard  <b.016434@gmail.com>
	
	* matlab/FiltersToolbox/scimat_ndgrid
	
	- Modified scimat_ndgrid to allow for 2d->4D inputs.  

2014-03-09  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* add matlab/test/test_tensor_fitting_methods.m (0.1.1)

	- Compares two methods of fitting the diffusion tensor to simulated data

2015-03-06  Benjamin Villard  <b.016434@gmail.com>
	
	* matlab/ThirdPartyToolbox/InfoTheoryToolbox
	
	- Added Information Theory toolbox provided on MATLAB Central by Michael Chen. 
	This toolbox contains various matlab files to compute nmi (normalized mutual information),
	and different entropy measures. File was obtained here: 
	
	http://uk.mathworks.com/matlabcentral/fileexchange/35625-information-theory-toolbox/content/nmi.m

2014-03-06  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT.m (0.1.7)

	- Can now perform a weighted linear tensor fit

	* matlab/DiffusionMRIToolbox/fit_stretched_exponential.m (0.1.3)

	- Now only fits the voxels that are above the noise floor (extra
	input argument for noise threshold, and output argument for number
	of shells fitted in each voxel).

2015-02-27  Benjamin Villard  <b.016434@gmail.com>

	* matlab/FileFormatToolbox/dcm2scimat.m: (0.4.0)

	- Changed dcm2scimat to check for uniform spacing between the 
	different slices given in the input. If non uniform dataset, 
	a volume will not be produced, and an error will be given.
 
2015-02-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT_YHd_method.m: (0.1.0)
	* matlab/RegistrationToolbox/regdemons3d.m: (0.1.1)

	- Add missing subversion properties.

2015-02-25  Jo Bates <jobates81@gmail.com>

	* Add matlab\DiffusionMRIToolbox\fit_DT_YHD_method.m: (0.1.0)
