@@ -1,5 +1,12 @@
 2015-03-10  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/FileFormatToolbox/dcm2scimat.m: (0.4.1)
+
+	- Rename variable "foo" as "pos". foo (and bar) are "placeholder
+	names used to name entities such as variables, functions, and
+	commands whose purpose is unimportant and serve only to
+	demonstrate a concept." (Wikipedia).
+
 	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.8)
 
 	- Add note to point at Jo's alternative method fit_DT_YHd_method.
